[gd_scene load_steps=5 format=3 uid="uid://hit7gtc8l11g"]

[ext_resource type="PackedScene" uid="uid://ueb0hs24bv4r" path="res://scenes/lama.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://0sna1rwqv4xo" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://cdpqc8x26w6es" path="res://scenes/background.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://b04gjv6yrusja" path="res://scenes/woolmeter.tscn" id="4_jyhfs"]

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Woolmeter" parent="CanvasLayer" instance=ExtResource("4_jyhfs")]
top_level = true
position = Vector2(35, 10)

[node name="Background" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(-586, -327)

[node name="Lama" parent="." instance=ExtResource("1_o5qli")]

[node name="Camera2D" type="Camera2D" parent="Lama"]
position_smoothing_enabled = true

[node name="Countdown" type="Timer" parent="."]
one_shot = true

[node name="CountdownDisplay" type="Label" parent="."]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -15.5
offset_right = 55.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
